@@ -59,8 +59,5 @@ ex7   - XBALL, an extension of QBALL.
 
 ex8   - Binary cuelist
       - Basics
-      - BINBALL & BINXBALL
+      - BINBALL & BINXBALL with Euclid abd ducking.
       - Complex time signatures
-      
-
-      
