@@ -25,6 +25,8 @@ Version 3.0.2 (2022.05.11)
     7. 2022-05-22 Adds new XBALL part type.
     8. 2022-05-27 Adds BINCUE for 'binary cue-list'
     9. 2022-05-28 Adds BINBALL and BINXBALL macros.
-   10. 2022-06-04 Adds optional Euclidean rhythms for BINBALL and BINXBALL.
-   11. 2022-06-04 Moves Euclid generator to legacy-euclid plugin.
+   10. 2022-06-04 Moves Euclid generator to legacy-euclid plugin.
+   11. 2022-06-04 Re-implements Euclid as set of functions. 
+   11. 2022-06-04 Adds optional Euclidean rhythms for BINBALL and BINXBALL.
    12. 2022-06-86 Adds cuelist ducking.
+   13. 2022-06-13 Extends example project ex8.
